# cyclone

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: main.yml
examples/: ballistics.rs  fireworks.rs
src/: lib.rs  particle.rs  vec.rs  vector.rs
