[package]
name = "impulse"
version = "0.1.0"
edition = "2021"
description = "A 3D physics engine"
license = "MIT"
repository = "https://github.com/matthewjberger/impulse"
keywords = ["physics", "simulation"]
categories = ["physics", "simulation"]
readme = "README.md"

[dependencies]

[dev-dependencies]
kiss3d = "0.35.0"
nalgebra = "0.30.1"