[package]
name = "impulse"
version = "0.1.0"
edition = "2021"
description = "A 3D physics engine"
license = "MIT"
repository = "https://github.com/matthewjberger/impulse"
keywords = ["physics", "simulation"]
categories = ["physics", "simulation"]
readme = "README.md"

[dev-dependencies]
anyhow = "1.0.68"
kiss3d = "0.35.0"
nalgebra = "0.30.1"
macroquad = "0.4.12"
